# EmbVSProjectGenerator

./: .gitignore  .gitmodules  CMakeLists.txt  EmbPrj.cpp  EmbPrj.h  EmbPrjIar.cpp  EmbPrjIar.h  EmbPrjKeil.cpp  EmbPrjKeil.h  EmbPrjMcux.cpp  EmbPrjMcux.h  EmbVSProjectGenerater.aps  EmbVSProjectGenerater.cpp  EmbVSProjectGenerater.rc  EmbVSProjectGenerater.sln  EmbVSProjectGenerater.vcxproj  EmbVSProjectGenerater.vcxproj.filters  EmbVSProjectGenerator.aps  EmbVSProjectGenerator.cpp  EmbVSProjectGenerator.rc  EmbVSProjectGenerator.sln  EmbVSProjectGenerator.vcxproj  EmbVSProjectGenerator.vcxproj.filters  LICENSE  README.md  pch.h  resource.h
resource/: EmbProjectTemplate.sln  c_cpp_properties_linux.json  resource.hpp
resources/: hello_world.sln  hello_world.vcxproj  hello_world.vcxproj.filters
src/: error.cpp  error.h  main.cpp  pg.cpp  pg.h  pgCmake.cpp  pgCmake.h  pgVS.cpp  pgVS.h  pgVSCode.cpp  pgVSCode.h  prj.cpp  prj.h  prjAurix.cpp  prjAurix.h  prjCCS.cpp  prjCCS.h  prjCube.cpp  prjCube.h  prjIAR.cpp  prjIAR.h  prjMCUX.cpp  prjMCUX.h  prjMDK.cpp  prjMDK.h  test.cpp  vspg.cpp
test/: test.cpp
test/workspace/IAR/: CMakeLists.txt.answer  hello_world.ewd  hello_world.ewp  hello_world.eww
test/workspace/Keil/: CMakeLists.txt.answer  hello_world.uvprojx
test/workspace/MCUXpressoIDE/: .cproject  .project  CMakeLists.txt.answer
test/workspace/STM32CubeIDE/: .cproject  .mxproject  .project  CMakeLists.txt.answer  hello_world.ioc
test/workspace/STM32CubeIDE/Core/Src/: main.c  stm32f4xx_hal_msp.c
xmlfile/: .cproject
